--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             <a href="https://github.com/DLin-beep" target="_blank">My GitHub</a>
           </p>
           <form action="mailto:dereklin0620@gmail.com" method="POST" enctype="text/plain">
-            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="text" name="name" placeholder="Your Name (This is a placeholder; it will not work)" required>
             <input type="email" name="email" placeholder="Your Email" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
