--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       align-items: center;
       justify-content: center;
       color: var(--text-color);
-      font-size: 2vw;
+      font-size: clamp(1rem, 2vw, 2rem);
       position: absolute;
       cursor: pointer;
-      transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
       border-radius: 20px;
       box-shadow: 0 8px 15px rgba(0,0,0,0.1);
       border: 3px solid var(--white);
+      transition: transform 0.2s ease;
     }
     .section:nth-child(1) {
       top: 2%;
@@ -82,26 +82,39 @@
       z-index: 5;
     }
     .section.active {
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 10;
-      transform: rotate(0deg) scale(1);
       border-radius: 30px;
+      z-index: 10;
+      animation: openSection 0.6s ease forwards;
+    }
+    @keyframes openSection {
+      0% {
+        transform: scale(0.8);
+        opacity: 0.7;
+      }
+      50% {
+        transform: scale(1.1);
+      }
+      100% {
+        transform: scale(1);
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+      }
     }
     .section.active ~ .section {
       pointer-events: none;
       opacity: 0;
     }
     .section.inactive {
-      transition: transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      transition: transform 0.6s, opacity 0.6s;
       opacity: 0.5;
     }
     .header {
       font-family: 'Bubblegum Sans', cursive;
       letter-spacing: 1px;
-      font-size: 3rem;
+      font-size: clamp(2rem, 5vw, 3rem);
       color: var(--text-color);
       pointer-events: none;
     }
@@ -240,7 +253,7 @@
       font-family: 'Bubblegum Sans', cursive;
       letter-spacing: 2px;
       margin-top: 0;
-      font-size: 2.2rem;
+      font-size: clamp(1.5rem, 4vw, 2.2rem);
       color: var(--text-color);
     }
     .projects-container .project-list {
@@ -360,29 +373,6 @@
     .contact-container button[type="submit"]:hover {
       transform: scale(1.05);
       background: var(--green-1);
-    }
-    @media (max-width: 600px) {
-      .section {
-        font-size: 5vw;
-      }
-      .header {
-        font-size: 8vw;
-      }
-      .projects-container h1,
-      .contact-container h1,
-      .content-container-about h1,
-      .skills-container h1 {
-        font-size: 6vw;
-      }
-      .projects-container .project-card {
-        width: 80%;
-      }
-      .content-container-about, .skills-container,
-      .projects-container, .contact-container {
-        width: 90vw;
-        max-height: 60vh;
-        padding: 5vw;
-      }
     }
   </style>
 </head>
