--- a/index.html
+++ b/index.html
@@ -256,7 +256,15 @@
       font-size: clamp(1.5rem, 4vw, 2.2rem);
       color: var(--text-color);
     }
-    .projects-container .project-list {
+    .subsection h2 {
+      font-family: 'Bubblegum Sans', cursive;
+      letter-spacing: 2px;
+      margin-top: 0;
+      font-size: clamp(1.3rem, 3vw, 2rem);
+      color: var(--text-color);
+      text-align: center;
+    }
+    .project-list {
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
@@ -264,7 +272,7 @@
       list-style: none;
       justify-content: center;
     }
-    .projects-container .project-card {
+    .project-card {
       background: rgba(255,255,255,0.2);
       border-radius: 10px;
       padding: 1.5vw;
@@ -276,13 +284,13 @@
       transition: transform 0.3s ease;
       text-align: center;
     }
-    .projects-container .project-card:hover {
+    .project-card:hover {
       transform: scale(1.05);
     }
-    .projects-container .project-card h3 {
+    .project-card h3 {
       margin: 0.5vw 0;
     }
-    .projects-container .project-card a {
+    .project-card a {
       color: var(--text-color);
       text-decoration: none;
       background: rgba(255,255,255,0.3);
@@ -292,7 +300,7 @@
       margin-top: 1vh;
       display: inline-block;
     }
-    .projects-container .project-card a:hover {
+    .project-card a:hover {
       background: rgba(255,255,255,0.5);
     }
     .contact-container {
@@ -414,24 +422,36 @@
         <button class="exit-btn" onclick="closeSection(event)">Close</button>
         <div class="projects-container">
           <h1>Projects</h1>
-          <ul class="project-list">
-            <li class="project-card">
-              <h3>Flight Simulation</h3>
-              <a href="https://github.com/DLin-beep/Flight-Simulation" target="_blank">View on GitHub</a>
-            </li>
-            <li class="project-card">
-              <h3>Sudoku Project</h3>
-              <a href="https://github.com/DLin-beep/Sudoku-Project" target="_blank">View on GitHub</a>
-            </li>
-            <li class="project-card">
-              <h3>GBM Simulation</h3>
-              <a href="https://github.com/DLin-beep/GBM-Simulation" target="_blank">View on GitHub</a>
-            </li>
-            <li class="project-card">
-              <h3>LSTM and RFM Model</h3>
-              <a href="https://github.com/DLin-beep/LSTM-and-RFM-Model" target="_blank">View on GitHub</a>
-            </li>
-          </ul>
+          <div class="subsection">
+            <h2>Programming Projects</h2>
+            <ul class="project-list">
+              <li class="project-card">
+                <h3>Flight Simulation</h3>
+                <a href="https://github.com/DLin-beep/Flight-Simulation" target="_blank">View on GitHub</a>
+              </li>
+              <li class="project-card">
+                <h3>Sudoku Project</h3>
+                <a href="https://github.com/DLin-beep/Sudoku-Project" target="_blank">View on GitHub</a>
+              </li>
+              <li class="project-card">
+                <h3>GBM Simulation</h3>
+                <a href="https://github.com/DLin-beep/GBM-Simulation" target="_blank">View on GitHub</a>
+              </li>
+              <li class="project-card">
+                <h3>LSTM and RFM Model</h3>
+                <a href="https://github.com/DLin-beep/LSTM-and-RFM-Model" target="_blank">View on GitHub</a>
+              </li>
+            </ul>
+          </div>
+          <div class="subsection">
+            <h2>Academic Projects</h2>
+            <ul class="project-list">
+              <li class="project-card">
+                <h3>Quantum Finance</h3>
+                <a href="https://drive.google.com/file/d/1dRaqKmPW0ob5fvHbqvyp2CerBiIC7Adp/view?usp=sharing" target="_blank">Open PDF</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
