--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>My Website</title>
-  <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --bg-color: #EBE7D3;
-      --green-1: #A7D0CD;
-      --green-2: #8FCB9B;
-      --green-3: #C2DED1;
-      --green-4: #A3B18A;
-      --text-color: #333;
+      --bg-color: #141414;
+      --section-bg: #232323;
+      --content-bg: #232323;
+      --text-color: #f0f0f0;
+      --accent: #d4af37;
       --white: #fff;
     }
     body {
@@ -23,7 +22,7 @@
       align-items: center;
       overflow: hidden;
       background-color: var(--bg-color);
-      font-family: 'Comic Neue', cursive, sans-serif;
+      font-family: 'Roboto', sans-serif;
     }
     .container {
       width: 100vw;
@@ -41,89 +40,104 @@
       position: absolute;
       cursor: pointer;
       border-radius: 20px;
-      box-shadow: 0 8px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
       border: 3px solid var(--white);
-      transition: transform 0.2s ease;
+      transition: all 0.5s ease-in-out;
+      overflow: hidden;
+      background-color: var(--section-bg);
     }
     .section:nth-child(1) {
       top: 2%;
       left: 2%;
       width: 46%;
       height: 46%;
-      background-color: var(--green-1);
-      transform: rotate(-2deg);
     }
     .section:nth-child(2) {
       top: 2%;
       left: 52%;
       width: 46%;
       height: 46%;
-      background-color: var(--green-2);
-      transform: rotate(1deg);
     }
     .section:nth-child(3) {
       top: 52%;
       left: 2%;
       width: 46%;
       height: 46%;
-      background-color: var(--green-3);
-      transform: rotate(-1deg);
     }
     .section:nth-child(4) {
       top: 52%;
       left: 52%;
       width: 46%;
       height: 46%;
-      background-color: var(--green-4);
-      transform: rotate(2deg);
     }
     .section:not(.active):hover {
-      transform: scale(1.02) translateZ(0) !important;
-      z-index: 5;
+      border-radius: 0;
+      transform: scale(1.1);
+    }
+    .section::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      border: 2px solid var(--accent);
+      opacity: 0;
+      transform: rotate(10deg);
+      transition: all 0.5s ease-in-out;
+    }
+    .section:hover::before {
+      inset: 15px;
+      opacity: 1;
+      transform: rotate(0);
+    }
+    .section::after {
+      content: "Section";
+      position: absolute;
+      left: 50%;
+      bottom: 13px;
+      transform: translateX(-50%);
+      font-size: 6px;
+      text-transform: uppercase;
+      padding: 0 5px 0 8px;
+      color: var(--accent);
+      background: #243137;
+      opacity: 0;
+      letter-spacing: 7px;
+      transition: all 0.5s ease-in-out;
+    }
+    .section:hover::after {
+      letter-spacing: 3px;
+      opacity: 1;
     }
     .section.active {
       border-radius: 30px;
       z-index: 10;
-      animation: openSection 0.6s ease forwards;
+      transform: none !important;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 1;
     }
-    @keyframes openSection {
-      0% {
-        transform: scale(0.8);
-        opacity: 0.7;
-      }
-      50% {
-        transform: scale(1.1);
-      }
-      100% {
-        transform: scale(1);
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: 1;
-      }
+    .section.active:hover {
+      transform: none !important;
     }
-    .section.active ~ .section {
-      pointer-events: none;
-      opacity: 0;
-    }
-    .section.inactive {
-      transition: transform 0.6s, opacity 0.6s;
-      opacity: 0.5;
+    .section.active::before,
+    .section.active::after {
+      opacity: 0 !important;
     }
     .header {
-      font-family: 'Bubblegum Sans', cursive;
+      font-family: 'Montserrat', sans-serif;
       letter-spacing: 1px;
       font-size: clamp(2rem, 5vw, 3rem);
       color: var(--text-color);
       pointer-events: none;
+      transition: opacity 0.3s ease;
     }
     .section.active .header {
-      display: none;
+      opacity: 0;
     }
     .content {
       opacity: 0;
-      transform: scale(0.9);
+      transform: translateY(20px);
       position: absolute;
       text-align: left;
       visibility: hidden;
@@ -131,7 +145,7 @@
     }
     .section.active .content {
       opacity: 1;
-      transform: scale(1);
+      transform: translateY(0);
       visibility: visible;
       transition: opacity 0.4s ease, transform 0.4s ease, visibility 0s;
     }
@@ -142,7 +156,7 @@
       background-color: var(--white);
       color: var(--text-color);
       border: 2px solid var(--text-color);
-      font-family: 'Bubblegum Sans', cursive;
+      font-family: 'Montserrat', sans-serif;
       letter-spacing: 1px;
       font-size: 1.2rem;
       padding: 6px 12px;
@@ -166,7 +180,7 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       border: 3px solid var(--white);
       overflow-y: auto;
-      background: var(--green-1);
+      background: var(--content-bg);
       color: var(--text-color);
       text-align: left;
       position: relative;
@@ -176,7 +190,7 @@
       border-radius: 9999px;
     }
     .content-container-about::-webkit-scrollbar-track {
-      background: var(--green-1);
+      background: var(--content-bg);
       border-radius: 9999px;
     }
     .content-container-about::-webkit-scrollbar-thumb {
@@ -196,7 +210,7 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       border: 3px solid var(--white);
       overflow-y: auto;
-      background: var(--green-2);
+      background: var(--content-bg);
       color: var(--text-color);
       text-align: left;
       position: relative;
@@ -206,7 +220,7 @@
       border-radius: 9999px;
     }
     .skills-container::-webkit-scrollbar-track {
-      background: var(--green-2);
+      background: var(--content-bg);
       border-radius: 9999px;
     }
     .skills-container::-webkit-scrollbar-thumb {
@@ -226,7 +240,7 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       border: 3px solid var(--white);
       overflow-y: auto;
-      background: var(--green-3);
+      background: var(--content-bg);
       color: var(--text-color);
       text-align: left;
       position: relative;
@@ -236,7 +250,7 @@
       border-radius: 9999px;
     }
     .projects-container::-webkit-scrollbar-track {
-      background: var(--green-3);
+      background: var(--content-bg);
       border-radius: 9999px;
     }
     .projects-container::-webkit-scrollbar-thumb {
@@ -250,14 +264,14 @@
     .contact-container h1,
     .content-container-about h1,
     .skills-container h1 {
-      font-family: 'Bubblegum Sans', cursive;
+      font-family: 'Montserrat', sans-serif;
       letter-spacing: 2px;
       margin-top: 0;
       font-size: clamp(1.5rem, 4vw, 2.2rem);
       color: var(--text-color);
     }
     .subsection h2 {
-      font-family: 'Bubblegum Sans', cursive;
+      font-family: 'Montserrat', sans-serif;
       letter-spacing: 2px;
       margin-top: 0;
       font-size: clamp(1.3rem, 3vw, 2rem);
@@ -313,7 +327,7 @@
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       border: 3px solid var(--white);
       overflow-y: auto;
-      background: var(--green-4);
+      background: var(--content-bg);
       color: var(--text-color);
       text-align: left;
       position: relative;
@@ -323,7 +337,7 @@
       border-radius: 9999px;
     }
     .contact-container::-webkit-scrollbar-track {
-      background: var(--green-4);
+      background: var(--content-bg);
       border-radius: 9999px;
     }
     .contact-container::-webkit-scrollbar-thumb {
@@ -356,17 +370,17 @@
       width: 80%;
       margin: 1vh 0;
       padding: 1vh;
-      border: 3px solid var(--green-4);
+      border: 3px solid var(--content-bg);
       border-radius: 10px;
       font-size: 1.1rem;
-      font-family: 'Comic Neue', cursive, sans-serif;
+      font-family: 'Roboto', sans-serif;
     }
     .contact-container textarea {
       height: 15vh;
       resize: vertical;
     }
     .contact-container button[type="submit"] {
-      background: var(--green-2);
+      background: var(--section-bg);
       color: var(--text-color);
       border: none;
       padding: 10px 30px;
@@ -374,13 +388,13 @@
       cursor: pointer;
       font-size: 1.2rem;
       margin-top: 1vh;
-      font-family: 'Bubblegum Sans', cursive;
+      font-family: 'Montserrat', sans-serif;
       letter-spacing: 2px;
       transition: all 0.3s ease;
     }
     .contact-container button[type="submit"]:hover {
       transform: scale(1.05);
-      background: var(--green-1);
+      background: var(--content-bg);
     }
   </style>
 </head>
@@ -408,10 +422,10 @@
         <div class="skills-container">
           <h1>Skills</h1>
           <ul>
-            <li>Python (NumPy, Pandas, Plotly, & Matplotlib)</li>
+            <li>Python (NumPy, Pandas, Plotly, &amp; Matplotlib)</li>
             <li>Learning C/C++ and R</li>
             <li>Web Development languages: HTML, CSS, and JavaScript</li>
-            <li>Machine Learning (PyTorch, Tensorflow, & Scikit-learn)</li>
+            <li>Machine Learning (PyTorch, Tensorflow, &amp; Scikit-learn)</li>
           </ul>
         </div>
       </div>
@@ -468,8 +482,8 @@
             <a href="https://github.com/DLin-beep" target="_blank">My GitHub</a>
           </p>
           <form action="mailto:dereklin0620@gmail.com" method="POST" enctype="text/plain">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
+            <input type="text" name="name" placeholder="Your Name" required />
+            <input type="email" name="email" placeholder="Your Email" required />
             <textarea name="message" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
           </form>
@@ -479,34 +493,32 @@
   </div>
   <script>
     function toggleActive(activeSection) {
-      const sections = document.querySelectorAll('.section')
-      const isActive = activeSection.classList.contains('active')
+      const sections = document.querySelectorAll('.section');
+      const isActive = activeSection.classList.contains('active');
       sections.forEach(section => {
-        section.classList.remove('active','inactive')
-      })
+        section.classList.remove('active', 'inactive');
+      });
       if (!isActive) {
-        activeSection.classList.add('active')
+        activeSection.classList.add('active');
         sections.forEach(section => {
           if (!section.classList.contains('active')) {
-            section.classList.add('inactive')
+            section.classList.add('inactive');
           }
-        })
+        });
       }
     }
     function closeSection(event) {
-      event.stopPropagation()
-      const sections = document.querySelectorAll('.section')
+      event.stopPropagation();
+      const sections = document.querySelectorAll('.section');
       sections.forEach(section => {
-        section.classList.remove('active','inactive')
-      })
+        section.classList.remove('active', 'inactive');
+      });
     }
-    document
-      .querySelectorAll('.content, .content-container-about, .skills-container, .projects-container, .contact-container')
-      .forEach(container => {
-        container.addEventListener('click', event => {
-          event.stopPropagation()
-        })
-      })
+    document.querySelectorAll('.content, .content-container-about, .skills-container, .projects-container, .contact-container').forEach(container => {
+      container.addEventListener('click', event => {
+        event.stopPropagation();
+      });
+    });
   </script>
 </body>
 </html>
