--- a/index.html
+++ b/index.html
@@ -408,8 +408,8 @@
           <h1>About Me</h1>
           <ul>
             <li>Hi there! I'm Derek and I am passionate about the worlds of mathematics, programming, and problem-solving.</li>
-            <li>I’m working towards a career in FinTech and want to keep building on my foundation.</li>
-            <li>In my free time, I enjoy playing video games (mainly FPS and RPG), staying active through weight training and running, reading books (ASOIAF, Dune), and cooking.</li>
+            <li>I’m working towards a career in ML and DL and want to keep building on my foundation.</li>
+            <li>In my free time, I enjoy playing video games (FPS and RPG), staying active through weight training and running, reading books (ASOIAF, Dune), and cooking.</li>
             <li>Let’s connect if you are also interested in math, programming, or just solving puzzles in life!</li>
           </ul>
         </div>
